<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/preferences">

        <SwitchPreference
            android:defaultValue="false"
            android:key="night_mode"
            android:summaryOff="@string/night_mode_disabled"
            android:summaryOn="@string/night_mode_enabled"
            app:title="@string/night_mode_preference" />


    </PreferenceCategory>

    <PreferenceCategory app:title="@string/notification">

        <SwitchPreference
            android:defaultValue="true"
            android:key="notification_enabled"
            android:summaryOff="@string/notification_disabled"
            android:summaryOn="@string/notification_enabled"
            app:title="@string/notification_label" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="notification_sound"
            app:dependency="notification_enabled"
            app:title="@string/notification_sound" />


        <CheckBoxPreference
            android:defaultValue="true"
            android:key="notification_vibrate"
            app:dependency="notification_enabled"
            app:title="@string/notification_vibrate" />


    </PreferenceCategory>


    <PreferenceCategory app:title="@string/about">

        <PreferenceScreen
            android:key="version"
            android:summary="@string/app_version"
            android:title="@string/version_label" />


        <PreferenceScreen
            android:key="privacy_policy"
            android:title="@string/privacy_policy_label" />


        <PreferenceScreen
            android:key="terms_and_conditions"
            android:title="@string/terms_and_conditions_label" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/support">


        <PreferenceScreen
            android:key="contact_us"
            android:title="@string/contact_us_label" />

    </PreferenceCategory>

</PreferenceScreen>
